--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "git-meld"]
 	path = git-meld
 	url = git://github.com/wmanley/git-meld.git
+[submodule "willgit"]
+	path = willgit
+	url = git://gitorious.org/willgit/mainline.git/
